add main banner style and layout

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -78,6 +78,7 @@ h1 {
   font-family: "Montserrat";
   font-size: 3rem;
   font-weight: 700;
+  line-height: 1.25;
 }
 
 h2 {
@@ -88,6 +89,15 @@ h2 {
 
 img {
   max-width: 100%;
+}
+
+.column-large {
+  width: 60%;
+  margin-right: 4rem;
+}
+
+.column-small {
+  max-width: 26.25rem;
 }
 
 /* Header Area */
@@ -102,7 +112,7 @@ header {
   left: 0;
   right: 0;
   background-color: white;
-  border-bottom: 1px #9a9a9a solid;
+  border-bottom: 1px #e1e1e1 solid;
 }
 
 header img {
@@ -117,12 +127,12 @@ header img {
 }
 
 .dark-gray {
-  color: #323;
+  color: #323232;
   font-weight: 700;
 }
 
 .light-gray {
-  color: #9a9;
+  color: #9a9a9a;
   font-weight: 300;
 }
 
@@ -148,8 +158,35 @@ nav a {
 .main {
   padding-top: 6rem;
   margin: auto;
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  border-bottom: 1px #e1e1e1 solid;
 }
 
 .main img {
-  margin: 2rem 2.5rem 2rem 1.5rem;
+  margin: 0 0 2rem 1.5rem;
+}
+
+.main h1 {
+  margin-bottom: 2rem;
+}
+
+.main h2 {
+  line-height: 1.5;
+}
+
+.start-here  {
+  width: 100%;
+  background-color: #F7BA1E;
+  border-radius: 4px;
+  color: #fff;
+  text-align: center;
+  padding: 0.5rem 0;
+  text-decoration: none;
+  font-size: 1rem;
+  text-transform: uppercase;
+  border: none;
+  margin-top: 2rem;
 }
